API platform toegevoegd

--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ APP_SECRET=df73777857e1a2a733f6eb7bb5fa3b1c
 DATABASE_URL="mysql://root:@127.0.0.1:3306/difmapslocatie_db?serverVersion=mariadb-10.4.21"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
